# json2netcdf

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  data.json  environment.yaml  environment.yml  json2netcdf  json2netcdf-compact.py  json2netcdf.py  netcdf2json.py  setup.cfg
.github/workflows/: fair-software.yml
example/: data.json  external.json  external_group.json  external_var.json
src/json2netcdf/: __init__.py  __main__.py  json2netcdf.py
tests/: test_json2netcdf.py
