[metadata]
name = json2netcdf
version = 1.1.1
author = Sam Harrison
author_email = samharrison.xg@gmail.com
description = Package to convert JSON to NetCDF data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samharrison7/json2netcdf
project_urls =
    Bug Tracker = https://github.com/samharrison7/json2netcdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    netCDF4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    json2netcdf = json2netcdf.__main__:main